[gd_scene load_steps=16 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Sprites.png" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ball.gd" type="Script" id=4]
[ext_resource path="res://Audio/Hit.wav" type="AudioStream" id=5]
[ext_resource path="res://Fonts/LightShadow/Lightshadow.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Audio/brickBreak.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/newRow.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/gameOver.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/rowUp.wav" type="AudioStream" id=10]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 192, 16 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 9.0

[sub_resource type="DynamicFont" id=4]

size = 32
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[sub_resource type="DynamicFont" id=5]

size = 10
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="Ceil" type="StaticBody2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 192, 16 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceil" index="0"]

shape = SubResource( 1 )

[node name="Walls" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="Wall" type="KinematicBody2D" parent="Walls" index="0" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 48 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall" index="1"]

shape = SubResource( 2 )

[node name="Wall14" type="KinematicBody2D" parent="Walls" index="1" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 48 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall14" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall14" index="1"]

shape = SubResource( 2 )

[node name="Wall2" type="KinematicBody2D" parent="Walls" index="2" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 80 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall2" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2" index="1"]

shape = SubResource( 2 )

[node name="Wall10" type="KinematicBody2D" parent="Walls" index="3" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 80 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall10" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall10" index="1"]

shape = SubResource( 2 )

[node name="Wall3" type="KinematicBody2D" parent="Walls" index="4" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 112 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall3" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall3" index="1"]

shape = SubResource( 2 )

[node name="Wall13" type="KinematicBody2D" parent="Walls" index="5" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 112 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall13" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall13" index="1"]

shape = SubResource( 2 )

[node name="Wall4" type="KinematicBody2D" parent="Walls" index="6" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 144 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall4" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall4" index="1"]

shape = SubResource( 2 )

[node name="Wall11" type="KinematicBody2D" parent="Walls" index="7" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 144 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall11" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall11" index="1"]

shape = SubResource( 2 )

[node name="Wall5" type="KinematicBody2D" parent="Walls" index="8" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 176 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall5" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall5" index="1"]

shape = SubResource( 2 )

[node name="Wall12" type="KinematicBody2D" parent="Walls" index="9" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 176 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall12" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall12" index="1"]

shape = SubResource( 2 )

[node name="Wall6" type="KinematicBody2D" parent="Walls" index="10" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 208 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall6" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall6" index="1"]

shape = SubResource( 2 )

[node name="Wall15" type="KinematicBody2D" parent="Walls" index="11" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 208 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall15" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall15" index="1"]

shape = SubResource( 2 )

[node name="Wall7" type="KinematicBody2D" parent="Walls" index="12" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 240 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall7" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall7" index="1"]

shape = SubResource( 2 )

[node name="Wall16" type="KinematicBody2D" parent="Walls" index="13" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 240 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall16" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall16" index="1"]

shape = SubResource( 2 )

[node name="Wall8" type="KinematicBody2D" parent="Walls" index="14" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 272 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall8" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall8" index="1"]

shape = SubResource( 2 )

[node name="Wall17" type="KinematicBody2D" parent="Walls" index="15" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 272 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall17" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall17" index="1"]

shape = SubResource( 2 )

[node name="Wall9" type="KinematicBody2D" parent="Walls" index="16" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 16, 304 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall9" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall9" index="1"]

shape = SubResource( 2 )

[node name="Wall18" type="KinematicBody2D" parent="Walls" index="17" groups=[
"Wall",
]]

editor/display_folded = true
position = Vector2( 368, 304 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Walls/Wall18" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 32, 32, 32 )
_sections_unfolded = [ "Offset", "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall18" index="1"]

shape = SubResource( 2 )

[node name="Bricks" type="Node2D" parent="." index="2"]

[node name="Player" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 192, 304 )
_sections_unfolded = [ "Transform" ]
maxSpeed = 300.0
acceleration = 1500.0
friction = 0.2

[node name="Ball" type="KinematicBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 192, 288 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Ball" index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 32, 32, 32 )
_sections_unfolded = [ "Region" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball" index="1"]

shape = SubResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="Ball" index="2"]

rect = Rect2( -10, -10, 20, 20 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Ball" index="3"]

stream = ExtResource( 5 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="NewRowTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 10.0
one_shot = false
autostart = false

[node name="UI" type="CanvasLayer" parent="." index="6"]

editor/display_folded = true
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="GameOverLabel" type="Label" parent="UI" index="0"]

visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -16.0
margin_right = 152.0
margin_bottom = 16.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Game Over"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="TopBanner" type="ColorRect" parent="UI" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 384.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 1 )
_sections_unfolded = [ "Material", "Theme" ]

[node name="ScoreLabel" type="Label" parent="UI" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_top = 8.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 5 )
text = "Score : 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="BrickBreakPlayer" type="AudioStreamPlayer2D" parent="." index="7"]

stream = ExtResource( 7 )
volume_db = 0.0
autoplay = false
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="NewRowPlayer" type="AudioStreamPlayer" parent="." index="8"]

stream = ExtResource( 8 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="GameOverPlayer" type="AudioStreamPlayer" parent="." index="9"]

stream = ExtResource( 9 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="RowUpPlayer" type="AudioStreamPlayer" parent="." index="10"]

stream = ExtResource( 10 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="brick_destroyed" from="Ball" to="." method="_on_brick_destroyed"]

[connection signal="dettached" from="Ball" to="." method="_on_Ball_dettached"]

[connection signal="out" from="Ball" to="." method="_on_Ball_out"]

[connection signal="screen_exited" from="Ball/VisibilityNotifier2D" to="Ball" method="_on_screen_exited"]

[connection signal="timeout" from="NewRowTimer" to="." method="_on_NewRowTimer_timeout"]


